some changes to reduce map issues on small mobiles

--- a/sites/volunteerscotland-search/main.scss
+++ b/sites/volunteerscotland-search/main.scss
@@ -2966,7 +2966,6 @@ footer.mdc-layout__footer {
   .mdc-drawer {
     height: 100% !important;
   }
-
   .mdc-typography--headline3 {
     font-size: 1.5rem;
     line-height: 1.6rem;
@@ -3125,6 +3124,19 @@ footer.mdc-layout__footer {
   footer.mdc-layout__footer {
     .mdc-layout-grid__inner {
       grid-gap: 0;
+    }
+  }
+
+  .map-content {
+    max-height: 6em;
+    text-overflow: ellipsis;
+    .post-info-item, .post-title{
+      white-space: nowrap;
+      overflow: hidden !important;
+      text-overflow: ellipsis !important;
+    }
+    .post-info-extra {
+      display: none;
     }
   }
 }
@@ -4467,4 +4479,109 @@ ul.hearts li.filled span.icon-heart:before {
   -webkit-animation-duration:1s;
   -moz-animation-duration:1s;
   animation-duration:1s;
+}
+
+//================ Sharing buttons
+
+.resp-sharing-button__link,
+.resp-sharing-button__icon {
+  text-decoration: none;
+  display: inline-block
+}
+
+.resp-sharing-button__link {
+  text-decoration: none;
+  color: #fff;
+  margin: 0.5em
+}
+
+.resp-sharing-button {
+  border-radius: 5px;
+  transition: 25ms ease-out;
+  padding: 0.5em 0.75em;
+  font-family: Helvetica Neue,Helvetica,Arial,sans-serif
+}
+
+.resp-sharing-button__icon svg {
+  width: 1em;
+  height: 1em;
+  margin-right: 0.4em;
+  vertical-align: top
+}
+
+.resp-sharing-button--small svg {
+  margin: 0;
+  vertical-align: middle
+}
+
+/* Non solid icons get a stroke */
+.resp-sharing-button__icon {
+  stroke: #fff;
+  fill: none
+}
+
+/* Solid icons get a fill */
+.resp-sharing-button__icon--solid,
+.resp-sharing-button__icon--solidcircle {
+  fill: #fff;
+  stroke: none
+}
+
+.resp-sharing-button--twitter {
+  background-color: #55acee
+}
+
+.resp-sharing-button--twitter:hover {
+  text-decoration: none;
+  background-color: #2795e9
+}
+
+
+.resp-sharing-button--facebook {
+  background-color: #3b5998
+}
+
+.resp-sharing-button--facebook:hover {
+  text-decoration: none;
+  background-color: #2d4373
+}
+
+.resp-sharing-button--linkedin {
+  background-color: #0077b5
+}
+
+.resp-sharing-button--linkedin:hover {
+  background-color: #046293
+}
+
+.resp-sharing-button--email {
+  background-color: #777
+}
+
+.resp-sharing-button--email:hover {
+  background-color: #5e5e5e
+}
+
+.resp-sharing-button--facebook {
+  background-color: #3b5998;
+  border-color: #3b5998;
+}
+
+.resp-sharing-button--facebook:hover,
+.resp-sharing-button--facebook:active {
+  text-decoration: none;
+  background-color: #2d4373;
+  border-color: #2d4373;
+}
+
+.resp-sharing-button--twitter {
+  background-color: #55acee;
+  border-color: #55acee;
+}
+
+.resp-sharing-button--twitter:hover,
+.resp-sharing-button--twitter:active {
+  text-decoration: none;
+  background-color: #2795e9;
+  border-color: #2795e9;
 }
